--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <a class="nav-link nav-item" href="#">About Us</a>
             <a class="nav-link nav-item" href="#">Careers</a>
             <a class="nav-link nav-item" href="#">Community</a>
-            <a class="nav-link nav-item" href=""><button class="getStarted">Get Started</button></a>
+            <button class="getStarted">Get Started</button>
           </div>
         </div>
       </nav>
     </div>
     <div class="container">
       <div class="main">
-        <img src="./images/illustration-intro.svg" alt="" width="100%">
+        <img src="./images/illustration-intro.svg" alt="illustration" width="100%">
         <div>
           <h1 class="">Bring everyone together to build better products.</h1>
           <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
